syntax = "proto3";
import "google/protobuf/empty.proto";
option java_multiple_files = true;
option java_package = "regStubs";

package registerService; // package do proto

service RegisterService {
    rpc getService(google.protobuf.Empty) returns (ServerInfo);
}

message  ServerInfo{
  string ip = 1;
  int32 port = 2;
}